=======
CHANGES
=======
0.8.5 (unreleased)
------------------

0.8.4 (2009-07-23)
------------------
- Add the new GetPaidSalesforceOrderRecorder to plugins.xml [larubbio]

0.8.3 (2009-07-22)
------------------
- Add a new 'multishot' cart.  Currently used with getpaid.formgen so sibling adapters can access the cart used for single page checkouts. [larubbio]

0.8.2 (2009-07-10)
------------------
- Rollback the 'fix' for $0 shipping since it causes the shipping cost to be displayed to the user, but not charged.

0.8.1 (2009-07-07)
------------------
- Add shipping cost to the new emails [larubbio]
- Fix an uninitialized mailer [larubbio]

0.8 (2009-07-07)
----------------
- Allow the user to make changes to the emails that are sent out [larubbbio]
- Allow sending of emails on auth, charge and decline (I didn't see an event for refund) [larubbio]
- Manage Cart link in personal_bar changed from $object_url/@@getpaid-cart to $portal_url/@@getpaid-cart like in cart portlet [taito.horiuchi]
- Change the order of checkout buttons so the default is to continue through the pipeline [larubbio]
- Add a hacked 'fix' for $0 shipping bug when user moves backwards through the checkout pipeline [larubbio]

0.7.9 (2009-05-19)
------------------
- Updated translations [larubbio]

0.7.8 (2009-05-15)
------------------

- updated the way we get the version of the product, since there is no 
  more version file [lucielejard]

0.7.7 (2009-05-15)
------------------

- fixed the javascript, this fixes errors that were showing up in IE
- removed version.txt and replaced it by the metadata.xml,
- made sure the version is up to date [lucielejard]

0.7.6-1 (2009-05-12)
--------------------

- Add getpaid.formgen and getpaid.SalesforcePloneFormGenAdapter to plugins [larubbio]

0.7.6 (2009-05-12)
------------------

- Add variable amount donations [larubbio]
- Allow annotations on the shopping cart [larubbio]

0.7.5 (2009-03-13)
------------------
