@@ -47,11 +47,6 @@ Testing the setup aspects of GetPaid. Setting required settings.
     >>> browser.getControl(name="form.allow_refunds").displayValue = ['allow_refund']    
     >>> browser.getControl('Apply').click()
     >>> browser.getLink('GetPaid').click()
-    >>> browser.getLink('Email Notifications').click()
-    >>> browser.getControl(name='form.merchant_email_notification').displayValue = ['Do not send merchant email notification of a completed transaction']
-    >>> browser.getControl(name='form.customer_email_notification').displayValue = ['Do not send customer email notification of a completed transaction']
-    >>> browser.getControl('Apply').click()
-    >>> browser.getLink('GetPaid').click()
     >>> browser.getLink('Legal Disclaimers').click()
     >>> browser.getControl(name='form.disclaimer').value = 'Test disclaimer'
     >>> browser.getControl(name='form.privacy_policy').value = 'Test privacy policy'
@@ -85,7 +80,7 @@ Make Buyable
 
 Buy
 
-    >>> browser.getLink('Add to Cart').click()
+    >>> browser.getControl('Add to Cart').click()
     >>> 'SubTotal' in browser.contents
     True
 
