@@ -3,6 +3,7 @@ CHANGES
 =======
 0.8.5 (unreleased)
 ------------------
+- Allow users to change the opt-in language through the settings panel. [larubbio]
 
 0.8.4 (2009-07-23)
 ------------------
